convert images into text to fix the horizontal alignment issue

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -74,7 +74,7 @@ dfn {
 
 h1 {
     margin: .67em 0;
-    font-size: 2em
+    font-size: 2em;
 }
 
 mark {
@@ -1593,7 +1593,7 @@ h6 small {
 
 .h1,
 h1 {
-    font-size: 36px
+    font-size: 32px;
 }
 
 .h2,
